# K-WATCH

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  justfile  main.py  pyproject.toml  setup-all.sh
ansible/: .gitignore  ansible.cfg  hosts  hosts.example  playbook.yml
ansible/group_vars/: all.yml
deploy/: demo-hubble.yaml
deploy/benign-containers/: Chart.yaml  data-caching.yaml  mariadb-sysbench.yaml  media-streaming.yaml  values.yaml  web-serving.yaml
deploy/cilium/: hubble-values.yaml  network-policy.yaml
deploy/falco/: install
deploy/honeypot/: README.md  deployment.yaml  falco-rules.yaml
deploy/malicious-containers/: values.yaml
deploy/tetragon/: tracing-policy-ids.yaml
deployment_charts/cilium/: hubble-export-config.yaml  monitoring-setup.yaml  network-policy.yaml
deployment_charts/compromised-pods/: compromised-deployments.yaml  compromised_chart.yml
deployment_charts/k-watch/: detector.yaml
detector/: .env.example  Dockerfile  alerting.py  config.py  detect.py  hubble.py  logging.py  main.py  models.py  pyproject.toml  tailer.py  tetragon.py
feature_engineering/: .gitignore  convert_to_csv.py  hybrid_processor.py  label_mapping.json  pre_processing.ipynb
siem/: main.py
terraform/: .gitignore  README.md  generate-inventory.sh  main.tf  manage-cluster.sh  quick-start.sh  terraform.tfvars.example  tfplan
training/: KK_Klasifikasi kNN dan DT.ipynb  README.md  collect_data.py  dt_training.ipynb  ids_training.ipynb  kids_training.ipynb  read_pkl.ipynb  train_model.ipynb  train_model.py
wazuh/: agent-localfile.xml
(+97 files in other folders)
