[project]
name = "project-kids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.10.0",
    "matplotlib-inline>=0.1.7",
    "seaborn>=0.13.0",
    "kubediagrams>=0.7.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
]
